Fixed bg-img and other flex spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,17 @@
   font-family: "Fira Sans", sans-serif;
 }
 
+html {
+  min-height: 100vh;
+  width: 100vw;
+}
+
 body {
+  min-height: 95vh;
   background-color: #F0ECEE;
   margin: 15px;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -93,6 +101,8 @@ p {
 @media (min-width: 768px) {
   body {
     background-image: url(../img/bulldog.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     margin: 20px 50px;
   }
 
@@ -114,11 +124,26 @@ p {
     width: auto;
   }
 
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    height: 100%;
+    width: 45%;
+    flex: 1;
+  }
+
+  .tagline {
+    margin: 0;
+  }
+
   .more-info {
     padding: 15px 50px;
   }
 
   p {
-    font-size: 18px;
+    font-size: 20px;
+    line-height: 1.25;
   }
 }
